<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">XProtect</string>
    <string name="app_notenabled">XPrivacy is not enabled in the Xposed installer</string>
    <string name="app_wrongandroid">Only for Android version 4.0.3+</string>
    <string name="app_incompatible">XPrivacy is incompatible with %1$s</string>
    <string name="app_wrongenabler" translatable="false">Please upgrade the Pro enabler</string>
    <string name="app_version">XPrivacy version: %1$s (%2$d)</string>
    <string name="app_description">The ultimate privacy manager</string>
    <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
    <string name="app_compatibility">Running in compatibility mode</string>
    <string name="app_licensed">Licensed, thanks for your support!</string>
    <string name="app_help" translatable="false">https://github.com/M66B/XPrivacy#xprivacy</string>
    <string name="app_support" translatable="false">http://forum.xda-developers.com/showthread.php?t=2320783</string>
    <string name="menu_usage">Usage data</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_template">Template</string>
    <string name="menu_report">Report issue</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>
    <string name="menu_submit">Submit restrictions</string>
    <string name="menu_fetch">Fetch restrictions</string>
    <string name="menu_theme">Switch theme</string>
    <string name="menu_pro">Pro version</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help &#8230;</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_all">All</string>
    <string name="menu_toggle">Toggle restrictions</string>
    <string name="menu_clear_all">Clear all</string>
    <string name="menu_clear_usage">Clear</string>
    <string name="menu_clear_db">Clear all XPrivacy data</string>
    <string name="menu_usage_all">Toggle filter</string>
    <string name="menu_apply">Apply template</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_app_launch">Launch</string>
    <string name="menu_app_settings">Settings</string>
    <string name="menu_app_store">Play Store</string>
    <string name="menu_app_kill">Kill</string>
    <string name="menu_accounts">Select accounts to allow</string>
    <string name="menu_applications">Select applications to allow</string>
    <string name="menu_contacts">Select contacts to allow</string>
    <string name="menu_whitelists">Manage whitelists</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_changelog">Changelog</string>
    <string name="menu_flush">Flush cache</string>
    <string name="menu_update">Check for updates</string>
    <string name="menu_batch">Operations &#8230;</string>
    <string name="menu_legend">Legend</string>
    <string name="msg_abort">Aborting</string>
    <string name="msg_aborted">Aborted</string>
    <string name="msg_new">New</string>
    <string name="msg_update">Update</string>
    <string name="msg_loading">Loading &#8230;</string>
    <string name="msg_applying">Applying &#8230;</string>
    <string name="msg_applied">Template applied</string>
    <string name="msg_saved_to">Saved to %1$s</string>
    <string name="msg_no_restrictions">No restrictions found</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_select">Please select some applications</string>
    <string name="msg_limit">Please select fewer than %1$d applications</string>
    <string name="msg_done">Done</string>
    <string name="msg_reboot">Device restart required</string>
    <string name="msg_random_now">Randomize now</string>
    <string name="msg_random_access">Randomize on access</string>
    <string name="msg_random_boot">Randomize on boot</string>
    <string name="msg_restart">Application restart required</string>
    <string name="msg_register">Please register your device</string>
    <string name="msg_email">Please enter your e-mail address:</string>
    <string name="msg_registered">Check your e-mail to activate your device</string>
    <string name="msg_service">Update service running</string>
    <string name="msg_migrating">Migrating %1$s</string>
    <string name="msg_randomizing">Randomizing %1$s</string>
    <string name="msg_upgrading">Upgrading %1$s</string>
    <string name="msg_support_info">An internal check failed, do you want to send the support info?</string>
    <string name="msg_restrictedby">Restricted by XPrivacy</string>
    <string name="msg_service_missing">Privacy service not found; did you enable XPrivacy in the Xposed installer and reboot your device?</string>
    <string name="msg_service_version">Privacy service version mismatch; did you reboot your device after upgrading XPrivacy?</string>
    <string name="msg_service_updating">Please wait until the update service has been completed</string>
    <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
however it is impossible to guarantee it will work flawlessly on each and every device and for each and every application.
\n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
    <string name="restrict_accounts" tools:ignore="UnusedResources">Accounts</string>
    <string name="restrict_browser" tools:ignore="UnusedResources">Browser</string>
    <string name="restrict_calendar" tools:ignore="UnusedResources">Calendar</string>
    <string name="restrict_calling" tools:ignore="UnusedResources">Calling</string>
    <string name="restrict_clipboard" tools:ignore="UnusedResources">Clipboard</string>
    <string name="restrict_contacts" tools:ignore="UnusedResources">Contacts</string>
    <string name="restrict_dictionary" tools:ignore="UnusedResources">Dictionary</string>
    <string name="restrict_email" tools:ignore="UnusedResources">E-mail</string>
    <string name="restrict_identification" tools:ignore="UnusedResources">Identification</string>
    <string name="restrict_internet" tools:ignore="UnusedResources">Internet</string>
    <string name="restrict_ipc" translatable="false" tools:ignore="UnusedResources">IPC</string>
    <string name="restrict_location" tools:ignore="UnusedResources">Location</string>
    <string name="restrict_media" tools:ignore="UnusedResources">Media</string>
    <string name="restrict_messages" tools:ignore="UnusedResources">Messages</string>
    <string name="restrict_network" tools:ignore="UnusedResources">Network</string>
    <string name="restrict_nfc" translatable="false" tools:ignore="UnusedResources">NFC</string>
    <string name="restrict_notifications" tools:ignore="UnusedResources">Notifications</string>
    <string name="restrict_overlay" tools:ignore="UnusedResources">Overlay</string>
    <string name="restrict_phone" tools:ignore="UnusedResources">Phone</string>
    <string name="restrict_sensors" tools:ignore="UnusedResources">Sensors</string>
    <string name="restrict_storage" tools:ignore="UnusedResources">Storage</string>
    <string name="restrict_shell" tools:ignore="UnusedResources">Shell</string>
    <string name="restrict_system" tools:ignore="UnusedResources">System</string>
    <string name="restrict_view" tools:ignore="UnusedResources">View</string>
    <string name="restrict_help_view" tools:ignore="UnusedResources">Will restrict access to view actions and information</string>
    <string name="restrict_help_system" tools:ignore="UnusedResources">Will restrict access to system information, like installed applications</string>
    <string name="restrict_help_shell" tools:ignore="UnusedResources">Will restrict access to shell commands, including superuser commands</string>
    <string name="restrict_help_storage" tools:ignore="UnusedResources">Will restrict access to the storage, like files on your SD card or the internal storage</string>
    <string name="restrict_help_sensors" tools:ignore="UnusedResources">Will restrict access to the sensors, like the motion sensor</string>
    <string name="restrict_help_phone" tools:ignore="UnusedResources">Will restrict access to phone information, like your phone number</string>
    <string name="restrict_help_overlay" tools:ignore="UnusedResources">Will restrict overlay windows to prevent phishing</string>
    <string name="restrict_help_notifications" tools:ignore="UnusedResources">Will restrict access to system and application notifications and Google cloud messaging</string>
    <string name="restrict_help_nfc" tools:ignore="UnusedResources">Will restrict access to near field communication</string>
    <string name="restrict_help_network" tools:ignore="UnusedResources">Will restrict access to network information, like IP and MAC addresses and Wi-Fi network information</string>
    <string name="restrict_help_messages" tools:ignore="UnusedResources">Will restrict access to stored and received messages (SMS/MMS) and voicemail</string>
    <string name="restrict_help_media" tools:ignore="UnusedResources">Will restrict access to the camera (photos and videos) and the microphone</string>
    <string name="restrict_help_location" tools:ignore="UnusedResources">Will restrict access to your coarse and fine location</string>
    <string name="restrict_help_ipc" tools:ignore="UnusedResources">Will restrict inter-process communication, when used to circumvent other restrictions</string>
    <string name="restrict_help_internet" tools:ignore="UnusedResources">Will restrict access to the Internet</string>
    <string name="restrict_help_identification" tools:ignore="UnusedResources">Will restrict information which can identify you, like the serial number of your device</string>
    <string name="restrict_help_email" tools:ignore="UnusedResources">Will restrict access to e-mail information, like addresses and messages (standard and G-mail application only)</string>
    <string name="restrict_help_dictionary" tools:ignore="UnusedResources">Will restrict access to the user dictionary</string>
    <string name="restrict_help_contacts" tools:ignore="UnusedResources">Will restrict access to information about your contacts</string>
    <string name="restrict_help_clipboard" tools:ignore="UnusedResources">Will restrict access to information on the clipboard</string>
    <string name="restrict_help_calling" tools:ignore="UnusedResources">Will restrict calling phone numbers, sending messages (SMS/MMS) and access to your calling history</string>
    <string name="restrict_help_calendar" tools:ignore="UnusedResources">Will restrict access to your calendar information, like your appointments</string>
    <string name="restrict_help_browser" tools:ignore="UnusedResources">Will restrict access to browser information, like your bookmarks and the download history</string>
    <string name="restrict_help_accounts" tools:ignore="UnusedResources">Will restrict access to account information, like your Google account, which includes your G-mail address</string>
    <string name="whitelist_address" tools:ignore="UnusedResources">Addresses</string>
    <string name="whitelist_action" tools:ignore="UnusedResources">Action</string>
    <string name="whitelist_ipaddress" tools:ignore="UnusedResources">IP addresses</string>
    <string name="whitelist_library" tools:ignore="UnusedResources">Native libraries</string>
    <string name="whitelist_method" tools:ignore="UnusedResources">Method names</string>
    <string name="phone_accelarate">手机加速</string>
    <string name="permision_management">权限管理</string>
    <string name="flow_management">流量管理</string>
    <string name="theft_proof">手机防盗</string>
    <string name="harass_intercept">骚扰拦截</string>
    <string name="virus_cleaning">病毒查杀</string>
</resources>