<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/second"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/phone_accelarate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/phone_accelarate"
            android:gravity="center"
            android:text="@string/phone_accelarate" />

        <TextView
            android:id="@+id/permision_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/permision_management"
            android:gravity="center"
            android:text="@string/permision_management" />

        <TextView
            android:id="@+id/flow_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/flow_management"
            android:gravity="center"
            android:text="@string/flow_management" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/theft_proof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/phone_clean"
            android:gravity="center"
            android:text="@string/theft_proof" />

        <TextView
            android:id="@+id/harass_intercept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/harass_intercept"
            android:gravity="center"
            android:text="@string/harass_intercept" />

        <TextView
            android:id="@+id/virus_cleaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/virus_cleaning"
            android:gravity="center"
            android:text="@string/virus_cleaning" />
    </LinearLayout>

</RelativeLayout>